--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "slug": "smalltalk",
   "language": "Smalltalk",
-  "repository": "https://github.com/exercism/xsmalltalk",
+  "repository": "https://github.com/exercism/smalltalk",
   "active": false,
   "test_pattern": "TODO",
   "exercises": [
